--- a/tweets_model.ipynb
+++ b/tweets_model.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jacobashwall/Battlegrounds/blob/main/tweets_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jacobashwall/Tweets_Classification_Research/blob/main/tweets_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -68,6 +68,7 @@
         "from imblearn.over_sampling import ADASYN\n",
         "from multiprocessing import Process\n",
         "import tensorflow as tf\n",
+        "#try\n",
         "\n"
       ]
     },
